# rulegraph

./: .aider.conf.yml  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Makefile  README.md  action.yml  ai-catalog.json  mkdocs.yml  openapi.yaml  pyproject.toml  server.json  smithery.yaml  smoke_test.py
.claude/commands/: domain.md
.continue/: config.json
.cursor/rules/: project.mdc
.github/: copilot-instructions.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
docs/: api-reference.md  architecture.md  cli-reference.md  contributing.md  github-action.md  index.md  mcp.md  openai.md  quickstart.md
docs/case-studies/: game-dm-rule-arbitration.md  legal-compliance-arbiter.md
examples/: demo.py  dnd_game_master.py  policy_compliance_agent.py  trading_rules_arbiter.py
src/rulegraph/: __init__.py  api.py  cli.py  conflicts.py  coverage.py  importer.py  mcp_server.py  report.py  rule.py
tests/: conftest.py  test_api.py  test_arbiter.py  test_cli_runner.py  test_conflicts.py  test_coverage.py  test_graph.py  test_importer.py  test_report.py  test_rule.py  test_store.py
tools/: openai-tools.json
