[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rulegraph"
version = "0.1.1"
description = "Natural-language rulebook compiler for game arbitration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Sandeep Alluru", email = "onepuncchh@gmail.com" }]
keywords = [
    "gaming", "game-master", "rulebook", "arbitration",
    "nlp", "agents", "mcp", "llmops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "fastapi>=0.110",
    "httpx>=0.27",
]
mcp = ["mcp>=1.0"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.scripts]
rulegraph = "rulegraph.cli:main"
rulegraph-mcp = "rulegraph.mcp_server:run_server"

[project.urls]
Homepage      = "https://github.com/sandeep-alluru/rulegraph"
Repository    = "https://github.com/sandeep-alluru/rulegraph"
Documentation = "https://sandeep-alluru.github.io/rulegraph"
Changelog     = "https://github.com/sandeep-alluru/rulegraph/blob/main/CHANGELOG.md"
Issues        = "https://github.com/sandeep-alluru/rulegraph/issues"

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "N",    # pep8 naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-native rules
    "PT",   # flake8-pytest-style
]
ignore = [
    "S101",  # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "E501"]
"examples/**" = ["S101", "T201"]

[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
warn_return_any        = true
warn_unused_ignores      = true
warn_unused_configs      = true
disallow_any_generics    = true
check_untyped_defs       = true
disallow_untyped_defs    = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=rulegraph --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source   = ["rulegraph"]
branch   = true
omit     = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
fail_under   = 85
show_missing = true
